Fix header, button spacing.

--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,7 @@ body {
 .header {
     align-self: stretch;
     text-align: center;
-    padding: 64px 200px;
+    padding: 2em 1em;
     font-size: 32px;
     margin-top: 20px;
     box-shadow: 2px 3px black;
@@ -60,7 +60,7 @@ body {
 .game {
     display: flex;
     justify-content: center;
-    gap: 48px;
+    gap: 1em;
     margin-top: 100px;
     padding: 0px;
 }
@@ -72,6 +72,7 @@ body {
     background-color: rgba(126, 126, 126, 0.5);
     animation-duration: 0.4s;
     animation-name: stop_hover;
+    margin: 8px;
 }
 
 @keyframes stop_hover {
@@ -122,5 +123,7 @@ footer {
     background-color: rgba(126, 126, 126, 0.2);
     padding: 20px;
     margin-top: 54px;
+    margin-bottom: 54px;
     border-radius: 6px;
+    text-align: center;
 }
